--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
   <div class="man1" id="activback">sdjkfks</div>
   <div class="man1" id="activback">sdjkfks</div>
 </div> -->
-
+<!-- 
 <ul class="tabs">
   <li id="activback" class="active">Tab 1</li>
   <li id="activback" >Tab 2</li>
   <li id="activback" >Tab 3</li>
 </ul>
-
+4
 
 
 <script>
@@ -123,7 +123,7 @@ tabsArray.forEach((ele) => {
     e.currentTarget.classList.add("active");
   });
 });
-</script>
+</script> -->
 
 
 
