--- a/index.html
+++ b/index.html
@@ -7,129 +7,7 @@
     <link rel="stylesheet" href="/hh.css">
 </head>
 <body>
-    <!-- <ul class="tabs">
-        <li class="active" data-cont=".one">Tab 1</li>
-        <li data-cont=".tow">Tab 2</li>
-        <li data-cont=".three">Tab 3</li>
-    </ul>
-    <div class="content">
-        <div class="one" >content 1</div>
-        <div class="tow">content 2</div>
-        <div class="three">content 3</div>
-    </div> -->
-<!-- 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown link
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav> -->
-      <!-- <h2>What Can JavaScript Do?</h2>
-
-      <p id="demo">JavaScript can change HTML content.</p>
-      
-      <button type="button" onclick='document.getElementById("demo").innerHTML = "Hekko mather fucker"'>Click Me!</button> -->
-<!-- 
-      <button id="toggleButton" class="btn btn-primary btn-sm">اضهار</button>
-
-      <div class="bg-[#f5f5f5] my-3 p-4" id="contentWrapper" style="display: none;">
-        <span class="font-bold">سياسة القصر </span>
-        <div id="policyContent" class="text-gray-400 mr-2">
-            1 kasdjhfgkjdhfbskhsdhfjh.
-            2 fdjksvhfbkgjdhsbfgkdufg.
-            3 sdjkflbakfubldfuisabhlfiu.
-            4 iofshdflisauhsdnliafuhdsal.
-        </div>
-    </div> -->
-
-<!-- 
-    <h2>What Can JavaScript Do?</h2>
-
-<p>JavaScript can change HTML attribute values.</p>
-
-<p>In this case JavaScript changes the value of the src (source) attribute of an image.</p>
-
-<button onclick="document.getElementById('myImage').src='/imge/design-features.jpg'">Turn on the light</button>
-
-<img id="myImage" src="/imge/design-features.jpg" style="width:500px">
-
-<button onclick="document.getElementById('myImage').src='/imge/landing.jpg'">Turn off the light</button> -->
-    
-
-
-<!-- <h1>JavaScript Comparison</h1>
-<h2>The () ? : Ternary Operator</h2>
-
-<p>Input your age and click the button:</p>
-
-<input id="age" value="" />
-
-<button onclick="myFunction()">Try it</button> -->
-
-<!-- <p id="demo">The new day is : <span></span></p> -->
-
-<!-- <div class="man">
-  <div class="man1 active" id="activback">sdjkfks</div>
-  <div class="man1" id="activback">sdjkfks</div>
-  <div class="man1" id="activback">sdjkfks</div>
-</div> -->
-<!-- 
-<ul class="tabs">
-  <li id="activback" class="active">Tab 1</li>
-  <li id="activback" >Tab 2</li>
-  <li id="activback" >Tab 3</li>
-</ul>
-4
-
-
-<script>
-let tabs = document.getElementById("activback");
-let tabsArray = Array.from(tabs);
-
-  
-// console.log(tabsArray);
-
-tabsArray.forEach((ele) => {
-  ele.addEventListener("click", function (e) {
-    // console.log(ele);
-    tabsArray.forEach((ele) => {
-      ele.classList.remove("active");
-    });
-    e.currentTarget.classList.add("active");
-  });
-});
-</script> -->
-
-
-
-
-
-
+<button id="show">Show</button>
     <script src="/main.js"></script>
 </body>
 </html                                      
