I learn the forEach in jafascript

--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <link rel="stylesheet" href="/hh.css">
 </head>
 <body>
-<button id="show">Show</button>
+
+
+<ul>
+    <li class="active">shadow</li>
+    <li class="">shadow</li>
+    <li class="">shadow</li>
+</ul>
+<div class="continer">
+    <div class="">fight</div>
+    <div class="">fight</div>
+    <div class="">fight</div>
+</div>
     <script src="/main.js"></script>
 </body>
 </html                                      
