I learn object in javascript

--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 <body>
 
 
-<ul>
+<ul id="kil">
     <li class="active">shadow</li>
     <li class="">shadow</li>
     <li class="">shadow</li>
 </ul>
+<p>fjak</p>
+<span>fsjkf</span>
+<link rel="stylesheet" href="">
+<form action="">
+    <input type="text" name="" id="">
+</form>
 <div class="continer">
     <div class="">fight</div>
     <div class="">fight</div>
