I leran DOM in javasicrpt

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <li class="">shadow</li>
     <li class="">shadow</li>
 </ul>
-<p>fjak</p>
+<p class="jsdk" id="ja" title="sjs">fjak</p>
 <span>fsjkf</span>
 <link rel="stylesheet" href="">
 <form action="">
