i learn a childrin for selctor

--- a/index.html
+++ b/index.html
@@ -8,23 +8,8 @@
 </head>
 <body>
 
+<div>this is my<span>dhk</span><p>dsjhjhd</p><!-- ljdkd -->thias id duis ud</div>
 
-<ul id="kil">
-    <li class="active">shadow</li>
-    <li class="">shadow</li>
-    <li class="">shadow</li>
-</ul>
-<p class="jsdk" id="ja" title="sjs">fjak</p>
-<span>fsjkf</span>
-<link rel="stylesheet" href="">
-<form action="">
-    <input type="text" name="" id="">
-</form>
-<div class="continer">
-    <div class="">fight</div>
-    <div class="">fight</div>
-    <div class="">fight</div>  
-</div>
     <script src="/main.js"></script>
 </body>
 </html                                      
