--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
 
-<div>this is my<span>dhk</span><p>dsjhjhd</p><!-- ljdkd -->thias id duis ud</div>
-
+<form action="">
+    <input type="text" name="username" placeholder="Max 10 chars Only">
+    <input type="text" name="age" placeholder="oan">
+    <input type="submit" value="submit Data">
+</form>
+    <a href="https://google.com">google</a>
     <script src="/main.js"></script>
 </body>
 </html                                      
