--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
 
 <form action="">
-    <input type="text" name="username" placeholder="Max 10 chars Only">
+    <input autofocus type="text" name="username" placeholder="Max 10 chars Only">
     <input type="text" name="age" placeholder="oan">
-    <input type="submit" value="submit Data">
+    <input type="text" name="tu" placeholder="oan">
+    <input type="text" name="no" placeholder="oan">
 </form>
     <a href="https://google.com">google</a>
     <script src="/main.js"></script>
