fex the views and interactions in super admin

--- a/index.html
+++ b/index.html
@@ -7,14 +7,8 @@
     <link rel="stylesheet" href="/hh.css">
 </head>
 <body>
-
-<form action="">
-    <input autofocus type="text" name="username" placeholder="Max 10 chars Only">
-    <input type="text" name="age" placeholder="oan">
-    <input type="text" name="tu" placeholder="oan">
-    <input type="text" name="no" placeholder="oan">
-</form>
-    <a href="https://google.com">google</a>
+    <div id="sow" class="show in tow therr">shadow fight</div>
+    <shadow class="shadow">shadow</shadow>
     <script src="/main.js"></script>
 </body>
 </html                                      
