--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>الحصول على العمر</title>
+    <title>الحب</title>
     <link rel="stylesheet" href="/hh.css">
 </head>
 <body>
-    <div id="sow" class="show in tow therr">shadow fight</div>
-    <p>my p</p>
     <script src="/main.js"></script>
 </body>
 </html                                      
