--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <title>الحب</title>
     <link rel="stylesheet" href="/hh.css">
 </head>
-<body>
+<body style="width: 5000px; height: 5000px;">
+    <div class="cons">
+        <p>يرجا الانتضار <span>5</span></p>
+        <button><a href="#home">button</a></button>
+    </div>
+    <button class="homed"><a id="home" href="https://www.google.com/">google</a></button>
     <script src="/main.js"></script>
 </body>
 </html                                      
