--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>الحب</title>
     <link rel="stylesheet" href="/hh.css">
+    <style>
+        button {
+            background-color: red;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            font-weight: bold;
+            border-radius: 5px;
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            display: none;
+            cursor: pointer;
+        }
+    </style>
 </head>
-<body style="width: 5000px; height: 5000px;">  
-    <div class="cons">
-        <p>يرجا الانتضار <span>5</span></p>
-        <button><a href="#home">button</a></button>
-    </div>
-    <button class="homed"><a id="home" href="https://www.google.com/">google</a></button>
+<body style="height: 5000px;">  
+        <button type="button">top</button>
     <script src="/main.js"></script>
 </body>
 </html                                      
