--- a/index.html
+++ b/index.html
@@ -6,23 +6,60 @@
     <title>الحب</title>
     <link rel="stylesheet" href="/hh.css">
     <style>
-        button {
-            background-color: red;
-            color: white;
-            border: none;
-            padding: 5px 10px;
-            font-weight: bold;
-            border-radius: 5px;
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            display: none;
-            cursor: pointer;
+        body {
+          background-color: #eee;
         }
-    </style>
+        ul {
+          padding: 0;
+          margin: 0;
+          background-color: #ddd;
+          margin: 20px auto;
+          padding: 20px;
+          width: 400px;
+          list-style: none;
+          display: flex;
+          justify-content: space-between;
+        }
+        ul li {
+          width: 60px;
+          height: 60px;
+          border: 2px solid transparent;
+          opacity: 0.4;
+          cursor: pointer;
+          transition: 0.3s;
+        }
+        ul li.active,
+        ul li:hover {
+          opacity: 1;
+        }
+        ul li:first-child {
+          background-color: red;
+        }
+        ul li:nth-child(2) {
+          background-color: green;
+        }
+        ul li:nth-child(3) {
+          background-color: blue;
+        }
+        ul li:nth-child(4) {
+          background-color: black;
+        }
+        .experiment {
+          background-color: red;
+          width: 600px;
+          height: 300px;
+          margin: 20px auto;
+        }
+      </style>
 </head>
-<body style="height: 5000px;">  
-        <button type="button">top</button>
-    <script src="/main.js"></script>
-</body>
+<body>
+    <ul>
+      <li class="active" data-color="red"></li>
+      <li data-color="green"></li>
+      <li data-color="blue"></li>
+      <li data-color="black"></li>
+    </ul>
+    <div class="experiment"></div>
+    <script src="main.js"></script>
+  </body>
 </html                                      
