i learn about localStorage in js

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
     </style>
 </head>
 <body>
-    <ul>
+    <!-- <ul>
       <li class="active" data-color="red"></li>
       <li data-color="green"></li>
       <li data-color="blue"></li>
       <li data-color="black"></li>
     </ul>
-    <div class="experiment"></div>
+    <div class="experiment"></div> -->
     <script src="main.js"></script>
   </body>
 </html                                      
