--- a/index.html
+++ b/index.html
@@ -5,61 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>الحب</title>
     <link rel="stylesheet" href="/hh.css">
-        <style>
-      body {
-        background-color: #eee;
-      }
-      ul {
-        padding: 0;
-        margin: 0;
-        background-color: #ddd;
-        margin: 20px auto;
-        padding: 20px;
-        width: 400px;
-        list-style: none;
-        display: flex;
-        justify-content: space-between;
-      }
-      ul li {
-        width: 60px;
-        height: 60px;
-        border: 2px solid transparent;
-        opacity: 0.4;
-        cursor: pointer;
-        transition: 0.3s;
-      }
-      ul li.active,
-      ul li:hover {
-        opacity: 1;
-      }
-      ul li:first-child {
-        background-color: red;
-      }
-      ul li:nth-child(2) {
-        background-color: green;
-      }
-      ul li:nth-child(3) {
-        background-color: blue;
-      }
-      ul li:nth-child(4) {
-        background-color: black;
-      }  
-      .experiment {
-        background-color: red;
-        width: 600px;
-        height: 300px;
-        margin: 20px auto;
-      }
-    </style>
+    <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+    }
+    .div1 {
+      width: 300px;
+      height: 300px;
+      border-radius: 50%;
+      margin: 170px auto;
+      transition: background-color 1s ease-in-out;
+      box-shadow: 1px 0px 31px 7px ;
+    }
+  </style>
 </head>
 <body>
-    <!-- <ul>
-      <li class="active" data-color="red"></li>
-      <li data-color="green"></li>
-      <li data-color="blue"></li>
-      <li data-color="black"></li>
-    </ul>
-    <div class="experiment"></div> -->
+  <!-- <div class="container">
+    <div class="form">
+      <input type="text" class="input" />
+      <input type="submit" class="add" value="Add Task" />
+      <input type="submit" class="add1" value="Remov all" />
+    </div>
+    <div class="tasks"></div> -->
+
+    <div class="div1"> </div>
+  </div>
     <script src="main.js"></script>
   </body>
 </html                                      
