i learning about  Constructor Function New in js

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
       <input id="textinut" type="text">
       <button type="submit">but</button>
     </form>
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
   </body>
 </html                                      
