i learning about  Constructor Function New in js

--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 
 </head>
 <body>
-    <form action="">
-      <input id="textinut" type="text">
-      <button type="submit">but</button>
-    </form>
+  <p class="test">shapdw</p>
     <script src="main.js" type="module"></script>
   </body>
 </html                                      
